--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -610,7 +610,7 @@ ai_assaultswitch_descr
 	"KI-Lords die den mächtigsten oder schwächsten Gegner angreifen, &
 hatten manchmal die Tendenz mitten in einem Angriff das Ziel zu wechseln, &
 und ihre Truppen zu einer anderen Burg schicken. Mit dieser Einstellung, &
-passiert das nichtmehr, sobald der Angriff begonnen hat, d.h. während &
+passiert das nicht mehr, sobald der Angriff begonnen hat, d.h. während &
 des Sammelns vor der Burg kann ein Wechsel noch passieren."
 }
 
@@ -646,8 +646,8 @@ o_healer
 o_healer_descr
 {
 	"Der Heiler des Apothekengebäudes sucht nun verletzte Soldaten, Zivilisten &
-und Tiere auf und heilt diese. Nahe Ziele werden dabei bevorzugt. Mit jeder Heil-Animation &
+und Tiere auf und heilt diese. Nahe Ziele werden dabei bevorzugt. Mit jeder Heilungs-Animation &
 wird ca. 1/3 des Lebens eines Lanzenträgers geheilt. Das Schlendern durch die Gärten und &
-Aufsuchen von Pestwolken wird dadurch nicht ersetzt! Nur das Schlendern durch die Burg & 
+Aufsuchen von Pestwolken wird dadurch nicht ersetzt! Nur das Schlendern durch die Burg &
 wird ausgelassen, bis keine Verwundeten mehr in Reichweite sind."
 }
