--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -647,3 +647,29 @@ o_healer_descr
 	Он будет лечить в одной области замка всех пока не вылечет до конца, а только потом он перейдет к &
 	другому участку замка.Также он не начнет разсеивать облака чумы пока он не сходит в сады.
 }
+
+
+
+
+
+
+
+
+
+
+// ====================
+//        2.10
+// ====================
+
+
+
+o_xtreme
+{
+	"Remove the magic bar in Extreme"
+}
+
+o_xtreme_descr
+{
+	"Removes the magic bar in Crusader Extreme."
+}
+
