--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -645,7 +645,7 @@ o_healer_descr
 	Ближайшие цели обрабатываются первыми. Проигрывается анимация ,и он исцеляет за 1/3 секунды &
 	здоровье копейщика. Когда Целитель прогуливается он может разсеять облако чумы которое он заметит &
 	Он будет лечить в одной области замка всех пока не вылечет до конца, а только потом он перейдет к &
-	другому участку замка.Также он не начнет разсеивать облака чумы пока он не сходит в сады.
+	другому участку замка.Также он не начнет разсеивать облака чумы пока он не сходит в сады."
 }
 
 
