Added some acknowledgments

--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -539,12 +539,12 @@ me so enthusiastically.
 Special thanks go to:
 [FireFly Studios](https://fireflyworlds.com/) for the creation of the Stronghold series
 [Udwin (YouTube)](https://www.youtube.com/user/UdwinLP), because he made me remember Stronghold
-[Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) & [Radek2019](https://github.com/Radek2019) for the polish translation
+[Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) for the polish translation
 [Lolasik011](https://github.com/Lolasik011) for the russian translation
-[Evrey](https://github.com/Evrey) for his AI castles"
+[Evrey](https://github.com/Evrey) for his AI castles
+[Tatha](https://www.youtube.com/channel/UC4BrhBzHp1ymnczlkdKcSkg) for his AI castles
+[PitchNeeded](https://github.com/PitchNeeded) for his AI castles"
 }
-
-
 
 
 ai_assaultswitch
