--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -538,11 +538,12 @@ diesem Projekt so enthusiastisch unterstützt hat.
 Besonderer Dank geht an:
 FireFly Studios für die Stronghold-Serie
 [Udwin (YouTube)](https://www.youtube.com/user/UdwinLP), da er mich Stronghold hat erinnern lassen
-[Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) & [Radek2019](https://github.com/Radek2019) für die polnische Übersetzung
+[Lutel (YouTube)](https://www.youtube.com/user/MrLutel05) für die polnische Übersetzung
 [Lolasik011](https://github.com/Lolasik011) für die russische Übersetzung
-[Evrey](https://github.com/Evrey) für seine AI-Burgen"
+[Evrey](https://github.com/Evrey) für seine AI-Burgen
+[Tatha](https://www.youtube.com/channel/UC4BrhBzHp1ymnczlkdKcSkg) für seine AI-Burgen
+[PitchNeeded](https://github.com/PitchNeeded) für seine AI-Burgen"
 }
-
 
 ai_assaultswitch
 {
