fixed exception if the same failure appeared multiple times during installation

--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -1,5 +1,5 @@
 ﻿// ======================
-//         2.13
+//         2.12
 // ======================
 
 aiv_EvreyHistory
@@ -9,14 +9,9 @@ aiv_EvreyHistory
 
 aiv_EvreyHistory_descr
 {
-	"Добавляет один новый замок AI для каждого лорда, основываясь на реальных & исторических 
-замках или городах. [Создано Evrey](https://github.com/Evrey/SHC_AIV/)"
+	"Добавляет один новый замок AI для каждого лорда, основываясь на реальных &
+исторических замках или городах. [Создано Evrey](https://github.com/Evrey/SHC_AIV/) "
 }
-
-
-﻿// ======================
-//         2.12
-// ======================
 
 ui_AIC
 {
