Added Armory/Marketplace weapon order fix option.

--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -341,6 +341,16 @@ o_trooplimit_descr
 2400 jednostek. Ta wartość może zostać tutaj zmieniona."
 }
 
+o_armory_marketplace_weapon_order_fix
+{
+	"Fix armory/marketplace weapon orders to match"
+}
+
+o_armory_marketplace_weapon_order_fix_descr
+{
+	"Reorders Weapon icons in Armory and Marketplace to have the same order. Also moves Leather Armor between Mace and Crossbow, and moves Metal Armor between Polearm and Sword for easier access while in Marketplace scrolling through items."
+}
+
 ai_demolish
 {
 	"Dezaktywuj burzenie budynków dla pieniędzy przez przeciwników komputerowych"
