--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -1,4 +1,24 @@
-﻿// ======================
+﻿o_armory_marketplace_weapon_order_fix
+{
+	"Fix armory/marketplace weapon orders to match"
+}
+
+o_armory_marketplace_weapon_order_fix_descr
+{
+	"Reorders Weapon icons in Armory and Marketplace to have the same order. Also moves Leather Armor between Mace and Crossbow, and moves Metal Armor between Polearm and Sword for easier access while in Marketplace scrolling through items."
+}
+
+ai_fix_laddermen_with_enclosed_keep
+{
+    "Fix AI not using laddermen if they are enclosed"
+}
+
+ai_fix_laddermen_with_enclosed_keep_descr
+{
+    "AI (notably Snake) no longer stops using Laddermen with their sieging units if their keep is enclosed."
+}
+
+// ======================
 //         2.13
 // ======================
 
@@ -341,16 +361,6 @@ o_trooplimit_descr
 {
 	"The limit for the total amount of units one player can field is set to &
 2400/Players in Vanilla. This value can be changed here."
-}
-
-o_armory_marketplace_weapon_order_fix
-{
-	"Fix armory/marketplace weapon orders to match"
-}
-
-o_armory_marketplace_weapon_order_fix_descr
-{
-	"Reorders Weapon icons in Armory and Marketplace to have the same order. Also moves Leather Armor between Mace and Crossbow, and moves Metal Armor between Polearm and Sword for easier access while in Marketplace scrolling through items."
 }
 
 ai_demolish
