--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -1,4 +1,24 @@
-﻿// ======================
+﻿o_armory_marketplace_weapon_order_fix
+{
+	"Fix armory/marketplace weapon orders to match"
+}
+
+o_armory_marketplace_weapon_order_fix_descr
+{
+	"Reorders Weapon icons in Armory and Marketplace to have the same order. Also moves Leather Armor between Mace and Crossbow, and moves Metal Armor between Polearm and Sword for easier access while in Marketplace scrolling through items."
+}
+
+ai_fix_laddermen_with_enclosed_keep
+{
+    "Fix AI not using laddermen if they are enclosed"
+}
+
+ai_fix_laddermen_with_enclosed_keep_descr
+{
+    "AI (notably Snake) no longer stops using Laddermen with their sieging units if their keep is enclosed."
+}
+
+// ======================
 //         2.13
 // ======================
 
@@ -339,16 +359,6 @@ o_trooplimit_descr
 {
 	"Całkowity limit wojsk na mapie jest ustawiony w oryginalnej grze na &
 2400 jednostek. Ta wartość może zostać tutaj zmieniona."
-}
-
-o_armory_marketplace_weapon_order_fix
-{
-	"Fix armory/marketplace weapon orders to match"
-}
-
-o_armory_marketplace_weapon_order_fix_descr
-{
-	"Reorders Weapon icons in Armory and Marketplace to have the same order. Also moves Leather Armor between Mace and Crossbow, and moves Metal Armor between Polearm and Sword for easier access while in Marketplace scrolling through items."
 }
 
 ai_demolish
