--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -18,6 +18,16 @@ ai_fix_laddermen_with_enclosed_keep_descr
     "AI (notably Snake) no longer stops using Laddermen with their sieging units if their keep is enclosed."
 }
 
+o_override_identity_menu
+{
+    "Override the Set-up Identity menu adding new features"
+}
+
+o_override_identity_menu_descr
+{
+    "Adds Ranged and Melee unit selection to Set-up Identity menu. ONLY FOR NORMAL GAME MODE!"
+}
+
 
 // ======================
 //         2.13
