--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -18,6 +18,15 @@ ai_fix_laddermen_with_enclosed_keep_descr
     "AI (notably Snake) no longer stops using Laddermen with their sieging units if their keep is enclosed."
 }
 
+o_default_multiplayer_speed
+{
+    "Set default multiplayer speed."
+}
+
+o_default_multiplayer_speed_descr
+{
+    " "
+}
 
 // ======================
 //         2.13
