--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -23,6 +23,16 @@ o_shfy_religion_descr
 	" "
 }
 
+o_shfy_peasantspawnrate
+{
+	"Spawngeschwindigkeit Bauern"
+}
+
+o_shfy_peasantspawnrate_descr
+{
+	" "
+}
+
 o_shfy_resourcequantity
 {
 	"Anzahl der gelieferten Resourcen"
